# schematic_version

./: minicube_docker.md
omniparser/: CHANGELOG.md  pyproject.toml  setup.py
omniparser/example/: test_837_parser.py  test_baco_hap_beneficiary_parser.py  test_baco_hap_medical_claim_parser.py  test_baco_hap_practice_provider_parser.py  test_cclf8_parser.py  test_ecw_patientdemographic_parser.py  test_gap_allergy_parser.py  test_gi_allergy_parser.py  test_practice_roster_parser.py  test_provider_roster_parser.py
omniparser/example/data/baco_hap/: beneficiary.txt
omniparser/example/data/ecw/: diagnosis.txt  encounter.txt  facility.txt  hpi.txt  immunization.txt  medication.txt  orderandresult.txt  practiceuser.txt  preventive.txt  problemlist.txt  procedure.txt  procedurecode.txt  socialhistory.txt  surgicalhistory.txt  vital.txt
omniparser/example/data/gap/: allergy.csv
omniparser/example/data/provider_roster/: provider_roster.txt
omniparser/example/outputs/baco_hap/: beneficiary.json  medical_claim.json  practice_provider.json
omniparser/omniparser/: parser.py
omniparser/schemas/: testdp_schema_mapping.yaml
omniparser/schemas/baco_hap/: beneficiary_config.json  medical_claim_config.json  provider_config.json
omniparser/schemas/healthec/837/: claim_config.json
omniparser/schemas/healthec/ecw/: allergy_config.json  diagnosis_config.json  (+22 more)
omniparser/templates/: beneficiary_omniparser_template.json  medical_claim_omniparser_template.json  practice_omniparser_template.json  provider_omniparser_template.json
omniparser/tests/: test_omniparser_configs.py
(+67 files in other folders)
